--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     background-color: #f5f5f5;
+    margin: 0px;
 }
 
 .navbar-brand {
